UNRELEASED CHANGES:

* Add support for storing uploaded files on s3
* Sort contacts by first name, last name when linking significant others and kids

RELEASED VERSIONS:

v0.6.3 - 2017-08-16
-------------------

* Fix kids not being able to be removed
* Fix some CSRF potential vulnerabilities

v0.6.2 - 2017-08-16
-------------------

* Add support for Markdown for the notes and call logs

v0.6.1 - 2017-08-15
-------------------

* Fix delete account bug
* Fix kid deletion bug
* Fix gift creation

v0.6.0 - 2017-08-14
-------------------

* Add ability to set significant other and kids as contact.
* Add Italian translation
* Add debt total below a contacts debt
* Add world currencies
* Add German translation

v0.5.0 - 2017-07-24
-------------------

* Add version checking.
* Add ability to search various fields in contacts through the top-nav search.
* Fix gift view not being shown.

v0.4.2 - 2017-07-18
-------------------

New features:
* Add Indian rupee currency.
* Add Danish krone currency.
* Add Czech translation.

Improvements:
* Fix https issue on password reset.

v0.4.1 - 2017-07-13
-------------------

* Fix reminders not being sent introduced by previous version.

v0.4.0 - 2017-07-13
-------------------

New features:
* Add ability to keep track of phone calls.

Improvements:
* Fix Google Contact instructions link on the Import screen.
* Input field are now automatically selected when a radio button is checked.
* Many small bug fixes.

v0.3.0 - 2017-07-04
-------------------

New features:
* Add support for organizing people into tags (requires `bower update` for dev environment).
* Add ability to filter contacts per tags on the contact list.

Improvements:
* Fix import translation key on the import reports.
* Settings' sidebar now has better icons.

v0.2.1 - 2017-07-02
-------------------

Improvements:
* Update the design of the latest actions on the dashboard.